# fastcaptcha-python

./: CHANGELOG.md  CONTRIBUTING.md  DOWNLOAD_INSTRUCTIONS.md  LICENSE  MANIFEST.in  PYPI_PUBLISHING_GUIDE.md  README.md  pyproject.toml  setup.py
examples/: batch_processing.py  check_balance.py  error_handling.py  selenium_integration.py  solve_from_url.py  solve_single_image.py
fastcaptcha/: __init__.py  core.py  exceptions.py  utils.py
