[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcaptcha-api"
version = "1.0.0"
description = "Fastest AI-powered image CAPTCHA solver API for Python with 95% accuracy"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Bijaya kumar Tiadi", email = "contact@fastcaptcha.org"}
]
keywords = [
    "captcha",
    "captcha solver",
    "fast captcha",
    "python captcha api",
    "captcha ocr",
    "ai captcha solver",
    "image captcha",
    "captcha recognition",
    "automated captcha solver",
    "ocr api",
    "web scraping",
    "automation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://fastcaptcha.org"
Documentation = "https://fastcaptcha.org/api-docs/"
Repository = "https://github.com/fastcaptcha/fastcaptcha"
"Bug Tracker" = "https://github.com/fastcaptcha/fastcaptcha/issues"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
